# FedGastric

./: 41467_2024_44946_MOESM7_ESM.xlsx  Evaluation_Finn_v1.ipynb  Evaluation_Finn_v2.ipynb  README.md  confusion_matrices.ipynb  fl-eval-vgg19_3roundsver.ipynb  model_state_dict.txt  pyproject.toml  team_user_accessKeys.csv  vgg19-niko-results.ipynb
docs/: README.md
models/: client_fn.py  cnn_models.py  flower_client.py  howtorun.txt  local_data.py  server.py  train_client.py
models/aws/: aws_client.py  aws_data_loader.py  aws_import_data.py
notebooks/: Evaluation_Finn.ipynb  FL_Eval_Dave_VGG16 FedAvg_3round_results.ipynb  FL_Eval_David_VGG16-3round.ipynb  FL_Eval_David_VGG16.ipynb  FL_Eval_Finn_ResNet_ipynb의_사본.ipynb  FL_Eval_James_CustomResNet.ipynb  FL_Eval_Niko_VGG19.ipynb  FL_Eval_TJ_ResNet-3round.ipynb  FL_Eval_Valen_CustomResNet-3round.ipynb  ResultsGathering.ipynb  Untitled-1.json  dave-cloud_clinic0.ipynb  dave-disk-VGG16-120-clinic1.ipynb  dave-disk-VGG16-160-clinic1.ipynb  james_v02_model.ipynb  james_v02_models.ipynb  james_v03_model.ipynb  model_evaluation.ipynb  model_evaluation_dave.ipynb
notebooks/.ipynb_checkpoints/: FL_Eval_David_VGG16-3round-checkpoint.ipynb  FL_Eval_Davis_VGG16-checkpoint.ipynb  FL_Eval_Finn_ResNet-checkpoint.ipynb  FL_Eval_James_CustomResNet-checkpoint.ipynb  FL_Eval_Niko_VGG19-3round-checkpoint.ipynb  FL_Eval_Niko_VGG19-checkpoint.ipynb  dave-clinic-0-checkpoint.ipynb  (+5 more)
report/: 01_Introduction_task.md  02_litreview_method.md  03_outcomes_timeline.md  04_refs.md  fed_learning.bib  meta.yaml  test.docx
(+25 files in other folders)
